# dnd-character-manager

./: .gitattributes  .gitignore  README.md  index.html  install-mac.sh  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: 3d-character-spike.md
public/models/: Dwarf_Male_Walk_End.glb  Dwarf_Male_Walk_Loop.glb  Dwarf_Male_Walk_Start.glb  Elf_Female_Walk_End.glb  Elf_Female_Walk_Loop.glb  Elf_Female_Walk_Start.glb  Elf_Male_Idle.glb  Elf_Male_Walk_End.glb  Elf_Male_Walk_Loop.glb  Elf_Male_Walk_Start.glb  Halfling_Female_Idle.glb  Halfling_Male_Idle.glb  Human_Female_Idle.glb  Human_Male_Idle.glb  Tiefling_Female_Idle.glb  Tiefling_Male_Idle.glb
public/tts/: NOTICE.txt
scripts/: build-f5-runtime.ps1  compress-glb.cjs  convert-idle-to-glb.cjs  f5_cli.py  gen_f5_refs.py  generate-anims.cjs  hair-shot.mjs  kokoro_cli.py  kokoro_cli_requirements.txt  merge-animations-glb.cjs  prune-static-channels.cjs  strip-animation-fbx.cjs  trim-glb-animation.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: uninstall-hook.nsh
src-tauri/src/: campaign.rs  comfyui.rs  dm.rs  gemini_image.rs  lib.rs  local_llm.rs  maplog.rs  oauth.rs  pack_profile.rs  party_listener.rs  terrain.rs  tile_library.rs  tts.rs
src/components/: AlternateFormPanel.tsx  DeepSeaOverlay.tsx  DmNarrationLog.tsx  DriveSync.tsx  EidOverlay.tsx  FireworksOverlay.tsx  HauntOverlay.tsx  InspirationOverlay.tsx  RageOverlay.tsx  SendToDmButton.tsx  SnowOverlay.tsx  TalkToDMButton.tsx  WildShapeModal.tsx  YouAreDeadOverlay.tsx
src/data/: backgrounds-ggr.ts  backgrounds-phb2024.ts  backgrounds.ts  beastForms.ts  books.ts  feats-phb2024.ts  feats.ts  fightingStyles.ts  hair.ts  infusions.ts  invocations.ts  items.ts  maneuvers.ts  mapStylePresets.ts  mechanics.ts  metamagic.ts  modules.ts  optionalClassFeatures.ts  pactBoons.ts  startingEquipment.ts  subclassTips.ts  tileStyles.ts  townStore.ts  weapons.ts
src/hooks/: useAppUpdater.ts  useCharacterDerived.ts  useDmConnection.ts  useDmNarrationFeed.ts  useDmPushSync.ts  useDriveSync.ts
src/pages/: GraveyardPage.tsx  (+1 more)
(+78 files in other folders)
