[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
# v3 has NO default credential-store backend — it must be requested per
# platform via features, or Entry::new()'s set/get_password calls silently
# no-op (this app ships macOS + Windows only per the CI release matrix, see
# .github/workflows/release.yml — no sync-secret-service/Linux needed).
keyring = { version = "3", features = ["apple-native", "windows-native"] }
# OAuth helpers — all run inside Rust, credentials never touch the JS bundle
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tokio = { version = "1", features = ["rt"] }
pdf-extract = "0.12.0"
# Extracting the downloaded F5 runtime archive (task #86). deflate-only: the
# archive is built with Deflate/Fastest (see scripts/build-f5-runtime.ps1).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Measuring what a tile ACTUALLY is (see tile_library::art_signals) instead of
# trusting a vendor's folder names — so a pack whose layout we've never seen
# still gets ground art kept out of object slots and unusably dark textures kept
# off the floor. Only the three formats the catalogs ship; decoding is done on
# the ~12 shortlisted candidates per placement, never on the whole library (a
# full scan measured out at 17.6 min for 183k files).
image = { version = "0.25", default-features = false, features = ["webp", "png", "jpeg"] }
